--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/stack": "^7.0.12",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-font": "^13.0.1",
     "expo-image-picker": "^16.0.3",
-    "expo-splash-screen": "^0.29.13",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
